feat(api): pagination defaults, client error reporting, filters, schedulers
Several interlinked improvements bundled together because of cross-file
dependencies (DTO ↔ controller ↔ service ↔ test):

* PaginationConfig + matching application.properties keys, used by all
  list endpoints to enforce default/max page size, feed limit, comment
  tree depth, bulk query cap, contact list cap
* ClientErrorController + public POST /api/v1/client-errors endpoint
  (SecurityConfig permit + tests)
* GlobalTimeoutFilter to cap long-running reactive chains plus an
  expanded IdempotencyKeyFilter test
* AuditLogCleanupScheduler and SchedulerLock for distributed/atomic
  scheduling across instances (with tests)
* New shared DTOs: BulkStatusRequest, SearchAnalyticsResponse
* New status enums: ArticleReviewStatus, RoleUpgradeRequestStatus
* Numerous controller/service refactors to consume the above
* Repository tweaks for FTS and N+1 fixes
* SecurityConfig path allowlist for the new public client-errors endpoint
* Test coverage expanded for affected controllers, services, schedulers
  and the storage providers